# zen-choosistant

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
choosistant/data/: __init__.py  amazon.py
choosistant/data/amazon/: __init__.py  download.py  sample.py
choozen/: helpers.py  run.py
choozen/pipelines/: initial_data.py  training.py
choozen/steps/: __init__.py  convert_annotations.py  get_labeled_data.py  get_or_create_amazon_dataset.py  get_or_create_label_studio_project.py  prepare_data.py  sync_to_label_studio.py
deploy/terraform/azure/: .terraform.lock.hcl  dev.tfvars-example  main.tf  outputs.tf  variables.tf
deploy/terraform/azure/modules/aks/: main.tf  output.tf
deploy/terraform/azure/modules/blob-storage/: main.tf  output.tf  variables.tf
deploy/terraform/azure/modules/cert-manager/: main.tf  outputs.tf
deploy/terraform/azure/modules/cert-manager-crds/: README.md  cert-manager.crds.tf
deploy/terraform/azure/modules/ingress-ctrl/: main.tf  outputs.tf  variables.tf
deploy/terraform/azure/modules/k8s-resources/: main.tf  variables.tf
deploy/terraform/azure/modules/label-studio/: main.tf  outputs.tf  variables.tf
deploy/terraform/azure/modules/letsencrypt-certs/: main.tf  outputs.tf  variables.tf
deploy/terraform/azure/modules/reflector/: main.tf  variables.tf
deploy/terraform/azure/scripts/: destroy.sh  init.sh  variables.sh
scripts/dev/: init.sh
scripts/zenml/: common.sh  create-stack.sh  init.sh  register-artifact-store.sh  register-label-studio.sh  register-secret-manager.sh  update-chart.sh
(+27 files in other folders)
