[tool.poetry]
name = "zen-choosistant"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "choosistant"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
zenml = "0.21.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
