[tool.poetry]
name = "zen-choosistant"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "choosistant"},
    {include = "choozen"},
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "1.12.0"
torchvision = "0.13.0"
pytorch-lightning = "^1.8.1"
transformers = "^4.24.0"
evaluate = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = { version = "^2.20.0", source = "pypi" }
zenml = { version = "0.21.1", source = "pypi" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
